--- a/ducky/src/index.css
+++ b/ducky/src/index.css
@@ -990,6 +990,73 @@ body {
 }
 
 
+.message-edit-actions-bar {
+	display: flex;
+	flex-direction: row;
+}
+
+.message-edit-actions-icons {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.message-edit-action-icon {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 10px 10px 10px 10px;
+	width: 20px;
+	height: 20px;
+}
+
+.message-edit-action-icon:hover {
+	background-color: lightblue;
+	border-radius: 50%;
+}
+
+.message-edit-action-icon-file {
+	display: none;
+}
+
+.message-edit-action-icon-image {
+	width: 100%;
+}
+
+.message-edit-actions-text {
+
+}
+
+.message-edit-action-text {
+
+}
+
+.message-edit-action-text-button {
+	padding: 5px 10px 5px 10px;
+	border-radius: 10px;
+	cursor: pointer;
+	font-size: 14px;
+	font-weight: bold;
+	border: none;
+	position: absolute;
+	right: 4.5vw;
+	background-color: lightblue;
+}
+
+.message-edit-action-text-button-disabled {
+	background-color: lightblue;
+}
+
+.message-edit-action-text-button-active {
+	background-color: black;
+}
+
+.message-edit-action-text-button-active:hover {
+	opacity: .9;
+}
+
+
+
 .feed-content-friends {
 	display: flex;
 	flex-direction: column;
