--- a/ducky/src/index.css
+++ b/ducky/src/index.css
@@ -295,6 +295,7 @@ body {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	cursor: pointer;
 }
 
 .feed-more-menu-item:hover {
@@ -363,6 +364,10 @@ body {
 	width: 50px;
 	height: 50px;
 	border-radius: 50%;
+}
+
+.notification-view-title {
+	font-weight: bold;
 }
 
 
