--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,7 @@ body {
 	font-size: 14px;
   	-webkit-font-smoothing: antialiased;
   	-moz-osx-font-smoothing: bluescale;
+	  background-color: rgba(240, 240, 240, .5);
 }
 
 
@@ -1637,7 +1638,7 @@ body {
 	margin: 5px 5px 5px 5px;
 }
 
-.media-view-image {
+.media-view-image, .media-view-video {
 	width: 100%;
 	height: 100%;;
 }
